@@ -9,7 +9,6 @@ features for next releases
 		- sorting				https://sourceforge.net/tracker/?func=detail&aid=3435991&group_id=555701&atid=2254863
 		- MAC address	 		https://sourceforge.net/tracker/?func=detail&aid=3435687&group_id=555701&atid=2254863
 		- Set up switches 		https://sourceforge.net/tracker/?func=detail&aid=3434299&group_id=555701&atid=2254863
-		- search returns subnet	https://sourceforge.net/tracker/?func=detail&aid=3412277&group_id=555701&atid=2254863
 
 	
 	Optional
