@@ -2,13 +2,14 @@
 
 	New features:
 	-------------
-	+ Ability to import subnets from RIPE by AS in admin section;
+	+ Importing subnets from RIPE by AS in admin section;
 
 	Bugfixes / enhancements:
 	------------------------
 	+ Fixed dashboard errors if no IPv4/IPv6 subnets configured;
 	+ Fixed errors with viewing / modifying IP addresses for Operator users;
 	+ Added DNS resolving when editing/addin IP address;
+	+ Search returns also subnets;
 	+ jQuery update from 1.6.2 to 1.7;	
 	+ Highcharts update from 2.1.2 to 2.1.8;
 		
